Bug 1472796 - Fix action menu cut off at bottom of results pane (#3755)

--- a/ui/css/treeherder-global.css
+++ b/ui/css/treeherder-global.css
@@ -53,6 +53,7 @@ job-view {
 .th-global-content {
   overflow-y: auto;
   overflow-x: hidden;
+  height: 100%;
 }
 
 .pagination, .panel-title a {
